# TubeRAG

./: .gitignore  README.md  main.py  prompt_template.json  propmt_generator.py  pyproject.toml  rag_utils.py  requirements.txt
frontend/: chat_history.py
notebook/: breakdown.ipynb
